[package]
name = "kvmtool-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = "0.6.0"
kvm-ioctls = "0.15.0"
libc = "0.2.147"
vm-memory = "0.12.1"
vmm-sys-util = "0.11.1"

# libc = ">=0.2.39"
# kvm-ioctls = "0.6.0"
# kvm-bindings = "0.3.0"
# vmm-sys-util = "0.7.0"

[[bin]]
name = "stratovirt"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[workspace]
members = [
    "example/eg1-rs",
    "example/eg2-rs",
    "example/eg3-rs",
]
